--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				importance of visual storytelling and building a strong online presence. You can confidently 
 				rely on us to enhance your digital brand and ensure success in the ever-evolving digital landscape. <br>
 				
-				<br>Let us join forces and foster the growth of your business on this collaborative journey.
+				<br>Let's join forces and foster the growth of your business on this collaborative journey.
 
                 </p>
                         <div class="tab-titles">
@@ -91,7 +91,7 @@
                                 <p style="text-align:justify;">
 
                 Motion Graphics, Product Ads, Youtube Intro & Outro,
-                Logo Animation Edit Any Template Premiere pro and After Effects,
+                Logo Animation Edit Any Template Premiere Pro and After Effects,
 
                                 </p>
                                 </li>                     
@@ -144,7 +144,7 @@
                 <p style="text-align:center;">
                 Thumbnail, Banner, Background Designer, 
                 Ecommerce Listing Images, Facebook Ads,
-                Insagram Ads, Social Media Ads,
+                Instagram Ads, Social Media Ads,
                 E-commerce Platform Images                                                    
                 </p>
                 <a href=""target="_blank"></a>  
@@ -153,7 +153,7 @@
                 <i class="fa-solid fa-list-check"></i>
                 <h2>Social Media Managing</h2>
                 <p style="text-align:center;">
-                Content Scheduling And Planing, Content Creation, Ad Campaings,
+                Content Scheduling And Planing, Content Creation, Ad Campaigns,
                 Trend Analysis & Content Strategy, Data Visualization, Visual Storytelling
                 Profile Optimization, Community Management, Engagement Graphics, Branding and Consistency
                 </p>
