--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <p style="text-align:center"> 
                         Social Media Content, Tiktok Content,
                         Short Form Videos, Long Form Videos,
-                        E-commerce, Dropshipping Ads, Real Estate        
+                        Ecommerce, Dropshipping Ads, Real Estate        
                 </p>
                 <a href="#"></a>
                 </div>
@@ -145,7 +145,7 @@
                 Thumbnail, Banner, Background Designer, 
                 Ecommerce Listing Images, Facebook Ads,
                 Instagram Ads, Social Media Ads,
-                E-commerce Platform Images                                                    
+                Ecommerce Platform Images                                                    
                 </p>
                 <a href=""target="_blank"></a>  
                 </div>
